--- a/client/package.json
+++ b/client/package.json
@@ -4,6 +4,7 @@
   "private": true,
   "dependencies": {
     "@material-ui/core": "^3.1.1",
+    "axios": "^0.18.0",
     "material-ui": "^0.20.2",
     "react": "^16.5.2",
     "react-dom": "^16.5.2",
@@ -14,5 +15,6 @@
     "build": "react-scripts build",
     "test": "react-scripts test --env=jsdom",
     "eject": "react-scripts eject"
-  }
+  },
+  "proxy": "http://localhost:8080"
 }
